--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,9 @@
     </p>
     <div class="requestbutton"><button id="get-localhost">Get From Localhost</button></div>
    <div class="requestbutton"><button id="get-goodbye">Get From Goodbye</button></div>
-   <div class="requestbutton"><button id="put-localhost">Put To Localhost</button></div>
+   <div class="requestbutton"><button id="put-localhost">Put To Localhost</button>
+     <p class="textput" >Nome del file del put:</p><input class="puttextinput" type="text" id="putText">
+   </div>
     <script src="client.js"></script>
 </body>
 </html>
