post con express

--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
   <button id="put-Leila">Put information about Leia</button>
   </div>
 
-
+<button id="post-btn">Post</button>
   </div>
     <script src="client.js"></script>
 
