--- a/client/index.html
+++ b/client/index.html
@@ -35,9 +35,18 @@
     </div>
 
     <div class="allrequestbutton2">
-        <button id="put-luke">Put information about Luke</button>
-        <button id="put-Han"> Put information about Han</button>
-        <button id="put-Leila">Put information about Leia</button>
+        <button id="put-luke"><p href="#luketextput" data-toggle="collapse">Put information about Luke</p></button>
+        <button id="put-Han"><p href="#hantextput" data-toggle="collapse">Put information about Han</p></button>
+        <button id="put-Leila"><p href="#leiatextput" data-toggle="collapse">Put information about Leia</p></button>
+    </div>
+
+    <div class="collapsetext">
+        <div id="luketextput" class="collapse">
+            <div><label for="">Missione da aggiungere: <input type="text" id="missioneluke-put"></label></div>
+            <button id="putluke-btn">Aggiungi</button>
+        </div>
+        <div id="hantextput" class="collapse"></div>
+        <div id="leilatextput" class="collapse"></div>
     </div>
     <h2>_</h2>
 
