--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
         <div id="luketextput" class="collapse">
             <div><label for="">Missione da aggiungere: <input type="text" id="missioneluke-put"></label></div>
             <button id="putluke-btn">Aggiungi</button>
+            <p id="putMessage"></p>
         </div>
         <div id="hantextput" class="collapse"></div>
         <div id="leilatextput" class="collapse"></div>
