--- a/client/index.html
+++ b/client/index.html
@@ -44,15 +44,17 @@
         <div id="luketextput" class="collapse">
             <div><label for="">Missione da aggiungere: <input type="text" id="missioneluke-put"></label></div>
             <button id="putluke-btn">Aggiungi</button>
-            <p id="putMessage"></p>
+            <p id="putMessageLuke"></p>
         </div>
         <div id="hantextput" class="collapse">
           <div><label for="">Missione da aggiungere: <input type="text" id="missionehan-put"></label></div>
           <button id="puthan-btn">Aggiungi</button>
+          <p id="putMessageHan"></p>
         </div>
         <div id="leilatextput" class="collapse">
           <div><label for="">Missione da aggiungere: <input type="text" id="missioneleila-put"></label></div>
           <button id="putleila-btn">Aggiungi</button>
+          <p id="putMessageLeila"></p>
         </div>
     </div>
     <h2>_</h2>
